# afipcaeqrdecode

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
afipcaeqrdecode/: convert_first_page_of_pdf_to_image.py  decode_cae_url.py  get_cae_metadata.py
tests/: test.py  test_sample_files.py
